feat: Enhance exception handling and tenant management by adding specific handlers for InvalidCursorException and CapabilityDeniedException, updating TenantStatus to include SUSPENDED and GRACE states, and refactoring related domain ports for improved clarity and consistency.